--- a/index.html
+++ b/index.html
@@ -22,13 +22,63 @@
         <div>
           <div class="text">Công ty TNHH Rezkin Việt Nam</div>
           <div class="feature">
-            <ul>
+            <ul class="user-f">
               <li>
-                
+                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_1_547)">
+                  <path d="M12.4283 3.40686L11.6709 4.16473L9.82708 2.31813L10.5831 1.56073C10.6185 1.52556 10.6605 1.49773 10.7067 1.47883C10.7529 1.45993 10.8024 1.45033 10.8523 1.4506C10.955 1.4506 11.0507 1.48886 11.1221 1.56073L12.4278 2.8674C12.4993 2.93905 12.5394 3.03608 12.5395 3.13727C12.5396 3.23845 12.4996 3.33555 12.4283 3.40733M6.00601 9.71386L4.28121 7.99093L9.36508 2.93366L11.0567 4.6272L6.00601 9.71386ZM3.82481 10.2305L3.91861 8.70306L5.32701 10.1115L3.82481 10.2305ZM12.9668 2.32793L11.6597 1.0236C11.2313 0.592395 10.4743 0.592395 10.0459 1.0236L8.97915 2.27753L3.29281 7.71933L2.91855 10.9809L3.10055 11.1372L6.27761 10.7046L11.7143 5.0136L12.9668 3.9902C13.4111 3.545 13.4111 2.77453 12.9668 2.32793ZM11.8188 6.1448C11.6041 6.1448 11.4483 6.31653 11.4483 6.5298V11.6193C11.4483 12.1265 11.0549 12.5596 10.5476 12.5596H2.53775C2.02955 12.5596 1.44155 12.1265 1.44155 11.6193V3.60193C1.44155 3.09513 2.02955 2.55426 2.53821 2.55426H6.85068C7.06348 2.55426 7.23521 2.39653 7.23521 2.18326C7.23521 1.9686 7.06348 1.81226 6.85068 1.81226H2.53821C1.52461 1.81226 0.700012 2.58693 0.700012 3.6024V11.6193C0.700012 12.6343 1.52461 13.3002 2.53868 13.3002H10.5467C11.5612 13.3002 12.1884 12.6343 12.1884 11.6193V6.5298C12.1884 6.31653 12.0311 6.1448 11.8179 6.1448" fill="#0D6C42"/>
+                  </g>
+                  <defs>
+                  <clipPath id="clip0_1_547">
+                  <rect width="14" height="14" fill="white"/>
+                  </clipPath>
+                  </defs>
+                  </svg>
+                  <span>Đăng kí</span>
+              </li>
+              <li>
+                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_1_545)">
+                  <path d="M0.916687 11.3473C0.916687 11.5139 1.02778 11.625 1.19441 11.625C1.36104 11.625 1.47213 11.5139 1.47213 11.3473C1.47213 8.84731 3.49989 6.81955 5.99986 6.81955C8.49982 6.81955 10.5277 8.84731 10.5277 11.3473C10.5277 11.5139 10.6388 11.625 10.8055 11.625C10.9721 11.625 11.0832 11.5139 11.0832 11.3473C11.0832 9.04164 9.52763 7.09727 7.44432 6.45828C8.49982 5.93053 9.22221 4.84671 9.22221 3.5972C9.22221 1.81947 7.77774 0.375 5.99986 0.375C4.22197 0.375 2.77781 1.81947 2.77781 3.5972C2.77781 4.84718 3.50005 5.93053 4.55555 6.45828C2.44455 7.06942 0.916687 9.01379 0.916687 11.3473ZM3.33341 3.56888C3.33341 2.09672 4.52785 0.902124 6.00001 0.902124C7.47217 0.902124 8.66677 2.09734 8.66677 3.56888C8.66677 5.04041 7.47249 6.2361 6.00001 6.2361C4.52754 6.2361 3.33341 5.04166 3.33341 3.56888Z" fill="#0D6C42"/>
+                  </g>
+                  <defs>
+                  <clipPath id="clip0_1_545">
+                  <rect width="12" height="12" fill="white"/>
+                  </clipPath>
+                  </defs>
+                  </svg>
+                  <span>Đăng nhập</span>
+              </li>
+            </ul>
+            <ul class="social-f">
+              <li>
+                <a href="">
+                  <img src="./assets/images/ic-face.png" alt="image">
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./assets/images/ic-instagram.png" alt="image">
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./assets/images/ic-mail.png" alt="image">
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./assets/images/ic-phone.png" alt="image">
+                </a>
               </li>
             </ul>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="header-middle">
+      <div class="container-fluid">
+
       </div>
     </div>
   </header>
