--- a/index.html
+++ b/index.html
@@ -1505,7 +1505,7 @@
                         </defs>
                         </svg>
                       </div>
-                        <a href="">Hotline: 0816.893.399
+                        <a href="tel:0816893399">Hotline: 0816.893.399
                         </a>
                     </li>
                     <li>
@@ -1521,7 +1521,7 @@
                         </defs>
                         </svg>
                       </div>
-                        <a href="">Email: Hotro.hatoco@gmail.com</a>
+                        <a href="mailto:hotro.hataco@gmail.com">Email: Hotro.hatoco@gmail.com</a>
                     </li>
                     <li>
                       <div class="icon"><svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1535,7 +1535,7 @@
                         </defs>
                         </svg>
                       </div>
-                        <a href="">Website: hatoco.vn</a>
+                        <a href="https://hatoco.vn/">Website: hatoco.vn</a>
                     </li>
                   </ul>
                 </div>
