--- a/index.html
+++ b/index.html
@@ -221,7 +221,12 @@
           <img src="/assets/images/logo-mobile.png" alt="logo mobile">
         </div>
         <div class="btn-search-m">
-          <img src="/assets/images/ic-search.svg" alt="logo mobile">
+          <form>
+            <input type="text" placeholder="Tìm kiếm sản phẩm">
+          </form>
+          <button type="submit">
+            <img src="/assets/images/ic-search.svg" alt="logo mobile">
+          </button>
         </div>
       </div>
     </div>
@@ -306,6 +311,14 @@
         </div>
       </div>
     </section>
+    <div class="wrapper">
+      <div class="search-box">
+         <input type="text" placeholder="Search" class="input">
+         <div class="btn">
+           <i class="fa fa-search" aria-hidden="true"></i>
+         </div>
+      </div>
+    </div>
     <section class="product-hataco normal-product">
       <div class="container-fluid ">
         <div class="heading-hataco text-center ">
@@ -425,6 +438,9 @@
               <path d="M24.7949 18.2955H10.6477C9.73771 18.2955 9 19.0332 9 19.9432C9 20.8532 9.73771 21.5909 10.6477 21.5909H24.7949L19.159 26.3369C18.4682 26.9187 18.3732 27.9477 18.946 28.6461C19.5484 29.3805 20.6448 29.4562 21.3424 28.8116L31 19.8864L21.0235 10.8737C20.4741 10.3773 19.6383 10.3768 19.0882 10.8725C18.4571 11.4413 18.4508 12.4293 19.0746 13.0061L24.7949 18.2955Z" fill="#C4C4C4"/>
               </g>
               </svg>
+          </div>
+          <div class="swiper-pagination swiper-pagination-3 d-md-none ">
+
           </div>
         </div>
       </div>
