--- a/news.html
+++ b/news.html
@@ -286,6 +286,7 @@
                 <img src="/assets/images/thumb-news.png" alt="">
               </div>
               <div class="box-text">
+                <span class="meta-rank">Nổibật</span>
                 <h2>
                   <a href="">7 tính năng vượt trội của túi chườm thảo mộc Hatoco có thể bạn chưa biết</a>
                 </h2>
