--- a/index.html
+++ b/index.html
@@ -1607,7 +1607,7 @@
             <img src="./assets/images/bough.png" alt="line">
           </div>
         </div>
-        <div class="blog-content d-lg-flex ">
+        <div class="blog-content d-xl-flex ">
           <div class="box-slider">
             <div class="slider-blog-news swiper-container">
               <div class="swiper-wrapper">
@@ -1765,7 +1765,7 @@
       <div class="container-fluid">
         <div class="footer-middle">
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-xl-4">
               <div class="info-company-ft">
                 <div class="logo">
                   <a href="">
@@ -1839,7 +1839,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-2 col-6">
+            <div class="col-xl-2 col-6">
               <div class="title-ft">
                 <h4>về Hatoco</h4>
                 <div class="line"></div>
@@ -1853,7 +1853,7 @@
                 <li><a href="#">Giới thiệu chung</a></li>
               </ul>
             </div>
-            <div class="col-lg-2 col-6">
+            <div class="col-xl-2 col-6">
               <div class="title-ft">
                 <h4>CHÍNH SÁCH</h4>
                 <div class="line"></div>
@@ -1867,7 +1867,7 @@
                 <li><a href="#">Giới thiệu chung</a></li>
               </ul>
             </div>
-            <div class="col-lg-4">
+            <div class="col-xl-4">
               <div class="maps">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.677808493055!2d105.74341897591759!3d21.005548488574163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3134537008ef66a3%3A0x5dfb4ba59d7f31f1!2zNDMgUC4gQ-G6p3UgQ-G7kWMsIFTDonkgTeG7lywgTmFtIFThu6sgTGnDqm0sIEjDoCBO4buZaSAxMDAwMDAsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1701227127920!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
