menu table of content 2

--- a/index.html
+++ b/index.html
@@ -1723,7 +1723,7 @@
           <div class="col-lg-6">
             <div class="text">
               <h4>ĐĂNG KÝ nhận ưu đãi</h4>
-              <p>Để lại Email của bạn để nhận những thông tin mới nhất về ưu đãi sản phẩm HATOCO</p>
+              <div class="des"><p>Để lại Email của bạn để nhận những thông tin mới nhất về ưu đãi sản phẩm HATOCO</p></div>
             </div>
           </div>
           <div class="col-lg-6">
